--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav class="nav">
       <ul>
-        <li><a style="font-size: 1em;" href="about.html">About</a></li>
+        <li><a style="font-size: 1em;" href="App-ads.txt">App-ads.txt</a></li>
         <li><a style="font-size: 1em;" href="Terms.html">Terms & Condtions</a></li>
       </u>
     </nav>
