--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>About Us</h1>
+        <h1>Bill Check PK</h1>
     </header>
     <section class="mission">
         <h2> About Me ?</h2>
@@ -20,7 +20,7 @@
     </section>
   
     <footer>
-        <p>2024 BillCheckPK</p>
+        <p>2024 © BillCheckPK</p>
     </footer>
 </body>
 </html>
