--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <section class="mission">
         <h2> About Me ?</h2>
-        <p>I Am Saad Arshad Who Built This Site All By Myself.
-          <br><br> The Goal of The Site is To Provide Convenience To People
+        <p>I Am Saad Arshad, a web developer and a App Developer.
+          <br><br> This Site Only Contains My Contact Info 
           <br><br>
           Contact: +923324875111 <br><br> Email: Robotichuman830@gmail.com
         </p>
